prevent overflow to the right on eigenstateblue.html

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -1,6 +1,7 @@
 html {
     scroll-behavior: smooth;
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -11,6 +12,8 @@ body {
     color: #333;
     background-color: #F0FFF0;
     height: 100%;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 #loading-screen {
@@ -44,6 +47,7 @@ body {
     flex-direction: column;
     padding-top: 80px;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .content-wrapper {
